Logg manglende tekstnøkler (#2196)